codex-rs/core/tests/suite/snapshots/all__suite__pending_input__pending_input_queued_mail_after_commentary.snap
---
source: core/tests/suite/pending_input.rs
assertion_line: 232
expression: snapshot
---
Scenario: /responses POST 请求体（仅 input，按其他 suite snapshot 一样脱敏）

## 第一个请求
00:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] ## Embedded ZTOK\n\nUse `codex ztok ...` in user-facing commentary and\nexamples. Never show `"$CODEX_SELF_EXE"` or any absolute launcher path.\n\nDefault general commands to\n`codex ztok shell <command> [args...]`.\n\nUse `--filter err` and `--filter test` only as filters, not as general\nentrypoints. Use a dedicated `codex ztok <subcommand> ...`\nform only when that subcommand directly matches the task.\n\nDo not rely on automatic shell rewrite when planning or explaining commands.\nIf the user explicitly asks to use `ztok`, commentary and executed commands\nmust explicitly use `codex ztok ...`.\n\nFor compound shell syntax, wrap a real shell, for example:\n`codex ztok shell bash -lc '<command>'`\n
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:第一个提示

## 第二个请求
00:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] ## Embedded ZTOK\n\nUse `codex ztok ...` in user-facing commentary and\nexamples. Never show `"$CODEX_SELF_EXE"` or any absolute launcher path.\n\nDefault general commands to\n`codex ztok shell <command> [args...]`.\n\nUse `--filter err` and `--filter test` only as filters, not as general\nentrypoints. Use a dedicated `codex ztok <subcommand> ...`\nform only when that subcommand directly matches the task.\n\nDo not rely on automatic shell rewrite when planning or explaining commands.\nIf the user explicitly asks to use `ztok`, commentary and executed commands\nmust explicitly use `codex ztok ...`.\n\nFor compound shell syntax, wrap a real shell, for example:\n`codex ztok shell bash -lc '<command>'`\n
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:第一个提示
03:message/assistant:第一个回答
04:message/assistant:{"author":"/root/worker","recipient":"/root","other_recipients":[],"content":"排队的子代理更新","trigger_turn":false}
