codex-rs/core/tests/suite/snapshots/all__suite__pending_input__pending_input_user_input_no_preempt_after_reasoning.snap
---
source: core/tests/suite/pending_input.rs
assertion_line: 232
expression: snapshot
---
Scenario: /responses POST 请求体（仅 input，按其他 suite snapshot 一样脱敏）

## 第一个请求
00:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] ## Embedded ZTOK\n\nCodex exposes the current launcher path to shell commands as\n`CODEX_SELF_EXE` for internal execution plumbing. Treat that\nvariable as internal only: do not show `"$CODEX_SELF_EXE"` in user-facing\ncommentary or command examples. `ztok` is the token-optimized CLI proxy for\nshell commands.\n\nUse the logical launcher form `codex ztok ...` in\nall user-facing planning, commentary, and command examples. Do not plan around\nautomatic shell rewrite; rewrite is an internal runtime optimization, not the\nmodel's default execution strategy.\n\nUse the dedicated shell entrypoint for arbitrary commands:\n\n- `codex ztok shell <command> [args...]` runs a generic command and\n  preserves normal stdout/stderr.\n- `codex ztok shell --filter err <command> [args...]` keeps only error\n  and warning lines. Use this for noisy build, lint, or compile output.\n- `codex ztok shell --filter test <command> [args...]` keeps failures\n  plus the summary. Use this for generic test runners that do not already have\n  a dedicated ztok subcommand.\n- `codex ztok log [file]` deduplicates noisy log streams into a compact\n  error/warning-heavy summary.\n- `codex ztok json <file> --keys-only` shows JSON keys and types without\n  echoing full values back into the context window.\n\nDefault priority:\n\n1. For general shell commands, explicitly use `codex ztok shell <command> [args...]`.\n2. Use a dedicated `codex ztok <subcommand> ...` form only when that subcommand\n   directly matches the task.\n3. Add `--filter err` or `--filter test` only when you specifically want filtered error or test output.\n\nIf the user explicitly asks to use `ztok`, commentary and executed commands\nmust explicitly use a `codex ztok ...` form. Do not\nsay you will run a raw shell command first and let rewrite take over.\n\n`shell --filter err` and `shell --filter test` execute programs directly\ninstead of through a shell. For pipes, redirects, or shell operators, wrap the\nreal shell explicitly, such as\n`codex ztok shell bash -lc 'cargo test 2>&1 | tail -n 40'`.\n
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:第一个提示

## 第二个请求
00:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] ## Embedded ZTOK\n\nCodex exposes the current launcher path to shell commands as\n`CODEX_SELF_EXE` for internal execution plumbing. Treat that\nvariable as internal only: do not show `"$CODEX_SELF_EXE"` in user-facing\ncommentary or command examples. `ztok` is the token-optimized CLI proxy for\nshell commands.\n\nUse the logical launcher form `codex ztok ...` in\nall user-facing planning, commentary, and command examples. Do not plan around\nautomatic shell rewrite; rewrite is an internal runtime optimization, not the\nmodel's default execution strategy.\n\nUse the dedicated shell entrypoint for arbitrary commands:\n\n- `codex ztok shell <command> [args...]` runs a generic command and\n  preserves normal stdout/stderr.\n- `codex ztok shell --filter err <command> [args...]` keeps only error\n  and warning lines. Use this for noisy build, lint, or compile output.\n- `codex ztok shell --filter test <command> [args...]` keeps failures\n  plus the summary. Use this for generic test runners that do not already have\n  a dedicated ztok subcommand.\n- `codex ztok log [file]` deduplicates noisy log streams into a compact\n  error/warning-heavy summary.\n- `codex ztok json <file> --keys-only` shows JSON keys and types without\n  echoing full values back into the context window.\n\nDefault priority:\n\n1. For general shell commands, explicitly use `codex ztok shell <command> [args...]`.\n2. Use a dedicated `codex ztok <subcommand> ...` form only when that subcommand\n   directly matches the task.\n3. Add `--filter err` or `--filter test` only when you specifically want filtered error or test output.\n\nIf the user explicitly asks to use `ztok`, commentary and executed commands\nmust explicitly use a `codex ztok ...` form. Do not\nsay you will run a raw shell command first and let rewrite take over.\n\n`shell --filter err` and `shell --filter test` execute programs directly\ninstead of through a shell. For pipes, redirects, or shell operators, wrap the\nreal shell explicitly, such as\n`codex ztok shell bash -lc 'cargo test 2>&1 | tail -n 40'`.\n
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:第一个提示
03:reasoning:summary=思考中:encrypted=true
04:function_call/shell
05:message/assistant:第一个回答
06:function_call_output:failed to parse function arguments: invalid type: string "echo preserved tool call", expected a sequence at line 1 column 37
07:message/user:第二个提示
